...
                    padding: const EdgeInsets.all(10.0),
                    child: Text("profile picture"),
                  ),
                ],
              ),
              RoundedInputField(
                key: const Key('nameFieldSUScreen'),
                hintText: "name",
                controller: nameController,
              ),
              RoundedInputField(
                key: const Key('usernameFieldSUScreen'),
                hintText: "username",
                controller: usernameController,
              ),
              RoundedInputField(
                  key: const Key('emailFieldSUScreen'),
                  hintText: "email",
                  icon: Icons.email,
                  controller: emailController),
              RoundedPasswordField(
                key: const Key('passwordFieldSUScreen'),
                hintText: "password",
                passwordController: passwordController,
              ),
              RoundedPasswordField(
                key: const Key('rpasswordFieldSUScreen'),
                hintText: "repeat password",
                passwordController: repeatPasswordController,
                onChanged: (text) {
                  if (text != _password) {
                    print("password is not the same");
                  } else {
                    print("password is the same");
                  }
                },
              ),
              RoundedButton(
                key: const Key('signUpButtonSUScreen'),
                text: "SIGN UP",
                press: () async {
                  _name = nameController.text;
                  _username = usernameController.text;
                  _email = emailController.text;
                  _password = passwordController.text;
...
