...
                  fontWeight: FontWeight.bold,
                  letterSpacing: -0.9,
                ),
              ),
              SizedBox(height: size.height * 0.1),
              RoundedButton(
                key: const Key('loginButton'),
                text: "LOGIN",
                press: () {
                  Navigator.push(context,
                      MaterialPageRoute(builder: (context) => LoginScreen()));
                },
              ),
              RoundedButton(
                key: const Key('signUpButton'),
                buttonColor: Palette.secondaryColorTheme,
                text: "SIGN UP",
                press: () {
                  Navigator.push(context,
                      MaterialPageRoute(builder: (context) => SignUpScreen()));
                },
...
