...
                  await getImage();
                  contentList.insert(index, _image);
                }
              },
              itemBuilder: (context) => [
                PopupMenuItem(
                  key: const Key('addTextPopup'),
                  value: true,
                  child: Row(
                    children: <Widget>[
                      Padding(
                        padding: const EdgeInsets.fromLTRB(2, 2, 8, 2),
                        child: Icon(Icons.text_fields),
...
                    ],
                  ),
                ),
              ],
            )
          : InkWell(
              key: const Key('removeContentButton'),
              onTap: () {
                contentList.removeAt(index);
                setState(() {});
              },
              child: Container(
                width: 30,
...
